# MAI-OS-Labs

./: .gitignore  CMakeLists.txt
Labs/CP/doc/: CP.docx
Labs/CP/src/: Mckusey-Carels.cpp  cock.cpp  list_of_free_blocks.cpp  test3.cpp  usage_factor.cpp
Labs/Lab1/: CMakeLists.txt
Labs/Lab1/doc/: 215_Avramenko_Lab1.docx  protocol.txt
Labs/Lab1/src/: child1.c  parent.c
Labs/Lab2/: CMakeLists.txt
Labs/Lab2/doc/: 215_Avramenko_Lab2.docx  strace.txt
Labs/Lab2/src/: main.cpp  monitor_threads.sh
Labs/Lab3/: CMakeLists.txt  strace.txt
Labs/Lab3/doc/: 215_Avramenko_Lab3.docx
Labs/Lab3/src/: child1.cpp  child2.cpp  common.h  parent.cpp
Labs/Lab4/doc/: 215_Авраменко_Лаб4.docx  strace.txt
Labs/Lab4/src/: Makefile  int_rect.cpp  int_trap.cpp  program1.cpp  program2.cpp  tr_bin.cpp  tr_tri.cpp
Labs/Lab5/: CMakeLists.txt
Labs/Lab5/doc/: 215_Авраменко_Лаб5-7.docx  strace.txt
Labs/Lab5/src/: child.cpp  computing.cpp  control.cpp  lib.cpp  lib.h  nodes.cpp  utils.cpp  zmq_operations.cpp
Labs/Lab5/src/include/: message.h  nodes.h  utils.h  zmq_operations.h
Labs/Lab8/: 215_Avramenko_Lab8.docx
